--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Project Assets/Beginning Reference.mp4
+Project Assets/3D Models/Cockpit/uploads_files_1983289_Cockpit_Textures_1.0.rar
+Project Assets/3D Models/Cockpit/uploads_files_1983289_Zbrush.rar
