--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 Project Assets/Beginning Reference.mp4
 Project Assets/3D Models/Cockpit/uploads_files_1983289_Cockpit_Textures_1.0.rar
 Project Assets/3D Models/Cockpit/uploads_files_1983289_Zbrush.rar
+Project Assets/az_recorder_20241028_221051.mp4
