Removed Shadow Casting and New Checkpoint
-Casting shadows from the holes in the matching games and the building game has been removed;

-This is a new checkpoint via recording a video (Not uploaded in the project).

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Project Assets/Beginning Reference.mp4
 Project Assets/3D Models/Cockpit/uploads_files_1983289_Cockpit_Textures_1.0.rar
 Project Assets/3D Models/Cockpit/uploads_files_1983289_Zbrush.rar
 Project Assets/az_recorder_20241028_221051.mp4
+Project Assets/az_recorder_20241226_202004.mp4
